; ModuleID = '/home/carl/AnghaBench/micropython/lib/memzip/extr_lexermemzip.c_mp_lexer_new_from_file.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/memzip/extr_lexermemzip.c_mp_lexer_new_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MZ_OK = common dso_local global i64 0, align 8
@MP_ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mp_lexer_new_from_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @memzip_locate(i8* %5, i8** %3, i64* %4)
  %7 = load i64, i64* @MZ_OK, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @MP_ENOENT, align 4
  %11 = call i32 @mp_raise_OSError(i32 %10)
  br label %12

12:                                               ; preds = %9, %1
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @qstr_from_str(i8* %13)
  %15 = load i8*, i8** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32* @mp_lexer_new_from_str_len(i32 %14, i8* %15, i32 %17, i32 0)
  ret i32* %18
}

declare dso_local i64 @memzip_locate(i8*, i8**, i64*) #1

declare dso_local i32 @mp_raise_OSError(i32) #1

declare dso_local i32* @mp_lexer_new_from_str_len(i32, i8*, i32, i32) #1

declare dso_local i32 @qstr_from_str(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
